@@ -1,25 +1,23 @@
 package umc.server.domain.mission.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import umc.server.domain.member.entity.Member;
-import umc.server.domain.member.exception.MemberException;
-import umc.server.domain.member.exception.code.MemberErrorCode;
-import umc.server.domain.member.repository.MemberRepository;
 import umc.server.domain.mission.converter.MissionConverter;
 import umc.server.domain.mission.dto.MissionReqDTO.CreateMission;
 import umc.server.domain.mission.dto.MissionResDTO;
 import umc.server.domain.mission.entity.Mission;
 import umc.server.domain.mission.entity.mapping.MemberMission;
+import umc.server.domain.mission.enums.Status;
 import umc.server.domain.mission.repository.MemberMissionRepository;
 import umc.server.domain.mission.repository.MissionRepository;
 import umc.server.domain.store.entity.Store;
+import umc.server.domain.store.exception.StoreException;
+import umc.server.domain.store.exception.code.StoreErrorCode;
+import umc.server.domain.store.repository.StoreRepository;
 
 @Service
 @Transactional
@@ -27,32 +25,30 @@ import umc.server.domain.store.entity.Store;
 public class MissionService {
     private final MissionRepository missionRepository;
     private final MemberMissionRepository memberMissionRepository;
-    private final MemberRepository memberRepository;
+    private final StoreRepository storeRepository;
 
-    //미션조회
-    public List<MissionResDTO.MissionsResDTO> getMissions(Long memberId) {
+    //진행여부에 따른 미션조회
+    public MissionResDTO.Pagination<MissionResDTO.MissionsResDTO> getMyMission(
+            Long memberId,
+            Integer pageSize,
+            Integer pageNumber,
+            String sort,
+            Status status
+    ) {
+        Sort sortInfo = (sort != null) ? Sort.by(sort) : Sort.by("id").descending();
 
-        List<MemberMission> memberMissions = memberMissionRepository.findByMemberId(memberId);
+        PageRequest pageRequest = PageRequest.of(pageNumber, pageSize, sortInfo);
 
-        return memberMissions.stream()
-                .map(MemberMission::getMission) // MemberMission에서 Mission 엔티티 추출
-                .map(MissionConverter::toMissionsResDTO)
-                .collect(Collectors.toList());
+        Page<MemberMission> memberMissions =
+                memberMissionRepository.findByMemberIdAndMissionStatus(memberId, status, pageRequest);
+
+        return MissionConverter.toPagination(
+                memberMissions.map(mm -> MissionConverter.toMissionsResDTO(mm.getMission())).toList(),
+                memberMissions.getNumber(),
+                memberMissions.getSize()
+        );
     }
 
-    // 내 미션 확인
-    public List<MissionResDTO.MissionsResDTO> myMissions(Long memberId) {
-
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new MemberException(MemberErrorCode.MEMBER_NOT_FOUND));
-
-        List<MemberMission> missions = memberMissionRepository.findByMemberId(memberId);
-
-        return missions.stream()
-                .map(MemberMission::getMission) // MemberMission에서 Mission 엔티티 추출
-                .map(MissionConverter::toMissionsResDTO)
-                .toList();
-    }
 
     // 가게 미션 조회 (페이지네이션)
     public MissionResDTO.Pagination<MissionResDTO.MissionsResDTO> getMissions(
@@ -79,9 +75,11 @@ public class MissionService {
         );
     }
 
-    public Void createMission(Store store, Long storeId, CreateMission dto) {
 
-        Mission mission = MissionConverter.toMission(store, storeId, dto);
+    public Void createMission(Long storeId, CreateMission dto) {
+        Store store = storeRepository.findById(storeId)
+                .orElseThrow(() -> new StoreException(StoreErrorCode.STORE_NOT_FOUND));
+        Mission mission = MissionConverter.toMission(store, dto);
         missionRepository.save(mission);
         return null;
     }
